# sgit

./: .gitignore  Cargo.toml  LICENSE  README.md  sbgit.yaml  sgit.yaml
.github/workflows/: build.yml  release.yml
batch_git/: Cargo.toml
src/: git_config.rs  git_wrapper.rs  main.rs  sgit.rs
