[package]
name = "batch_git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# todo: create a clean deps version
# git2 = "0.14"

clap = "3.2.14"
url = "2.2.2"

# parse yaml
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

# logger
log = "0.4"
pretty_env_logger = "0.4"