[package]
name = "sgit"
version = "0.1.0"
edition = "2021"
authors = ["Phodal Huang <h@phodal.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/sgit"
documentation = "https://github.com/phodal/sgit"
homepage = "https://github.com/phodal/sgit"
description = """
stupid git in a tool
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    "targets/*",
    ".github/*",
    ".gitattributes",
    "sbgit.yaml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# todo: create a clean deps version
# git2 = "0.14"
walkdir = "2"

# parse `./git/config` file
rust-ini = "0.18"

clap = "3.2.14"
url = "2.2.2"

# parse yaml
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

# logger
log = "0.4"
pretty_env_logger = "0.4"